--- a/main/templates/pages/doc.html
+++ b/main/templates/pages/doc.html
@@ -34,8 +34,8 @@
         Apart from creating new notes, there are five important operations:
 
         <h4>Pinning</h4>
-        <img src="{% static '/ico/tag.svg' %}" alt="Pin" class="icon title-icon">
-        Clicking the little paperclip icon adds the note to a section on the sidebar called "Pinned". From there, it is always just a click away and you won't ever not remember it.
+        <img src="{% static '/ico/star.svg' %}" alt="Pin" class="icon title-icon">
+        Clicking the little paperclip icon adds the note to a section on the sidebar called "Favorites". From there, it is always just a click away and you won't ever not remember it.
         If you want to remove a note from this section, you can do that with the "Remove" button:   <img src="{% static '/ico/x-circle.svg' %}" alt="Remove" class="icon">
         <h4>Connecting</h4>
         <img src="{% static '/ico/link.svg' %}" alt="Connect" class="icon title-icon  ">
