--- a/main/templates/registration/password_change_done.html
+++ b/main/templates/registration/password_change_done.html
@@ -6,6 +6,6 @@
     Thank you. Your new password has been set.
 
   </p>
-      <a href="/notes" class="button-primary p-auto">Go back to my notes!</a>
+      <a href="/accounts/login/" class="button-primary p-auto">Go back to my notes!</a>
   </div>
 {% endblock %}
