--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -43,7 +43,7 @@
   <div id="notes-sections">
     <div class="note-section">
       <div class="note-section-title-wrapper">
-        <h2 class="note-section-title">Pinned</h2>
+        <h2 class="note-section-title">Favorites</h2>
       </div>
       <ul class="note-related-list">
         {% if pinnedNotes %}
@@ -51,7 +51,7 @@
         {% include 'widgets/noteTitle.html' with unpinnable='True' %}
         {% endfor %}
         {% else %}
-        You have no pinned notes yet.
+        You have no favorite notes yet.
         {% endif %}
       </ul>
       {% include 'widgets/paginator.html' with page=pinnedNotes section='pinned' %}
