fix bug where clicking on a note referenced in learning it opens the parent

--- a/main/templates/learning/queue.html
+++ b/main/templates/learning/queue.html
@@ -105,7 +105,7 @@
         <ul class="note-related-list">
           {% for reference in note.reference.all %}
           <li>
-          <a class="note-list-title" href="/open/{{ note.id }}/notes">{{ reference.title }}</a>
+          <a class="note-list-title" href="/open/{{ reference.id }}/notes">{{ reference.title }}</a>
           </li>
           {% endfor %}
         </ul>
