allow note combination from search

--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -107,6 +107,7 @@
           <summary>Tools</summary>
           <ul class="links-footer">
             <li><a href="/openRandomFromSearch">Open random note from search</a></li>
+            <li><a href="/mergeSearch">Merge all notes from search</a></li>
           </ul>
         </details>
 
