minor SEO optimization

--- a/main/templates/boilerplate/base.html
+++ b/main/templates/boilerplate/base.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+  <meta name="description" property="og:description" content="Online app for personal note-taking, research and learning using Luhmann's Zettelkasten and Spaced Repetition.">
+  <meta name="keywords" content="note, notes, note-taking, notetaking, research, bookmarks, knowledge, research, learning, vocabulary">
 </head>
 
 <body class="" id="body-default">
