--- a/main/templates/boilerplate/base.html
+++ b/main/templates/boilerplate/base.html
@@ -27,5 +27,7 @@
   <script>
   0
   </script>
+  <script data-goatcounter="https://chaoskasten.goatcounter.com/count"
+  async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
