remove clicky, move goatcounter

--- a/main/templates/boilerplate/page.html
+++ b/main/templates/boilerplate/page.html
@@ -52,15 +52,8 @@
       <a href="/doc">doc</a>
     </nav>
 
-    <script async src="//static.getclicky.com/101376988.js"></script>
-    <noscript
-      ><p>
-        <img
-          alt="Clicky"
-          width="1"
-          height="1"
-          src="//in.getclicky.com/101376988ns.gif"
-        /></p
-    ></noscript>
+    <script data-goatcounter="https://chaoskasten.goatcounter.com/count"
+    async src="//gc.zgo.at/count.js"></script>
+  
   </body>
 </html>
